CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.7

	- The scheduler could crash if a browsed printer times out while a job
	  is printing (STR #3754)
	- The scheduler incorrectly mapped custom page sizes to standard sizes
	  (STR #3764)
	- cupsfilter and pstops did not map IPP attributes to PPD options due to
	  a change in cupsMarkOptions (STR #3756)
	- The scheduler did not always show the most recent status message from
	  the print filters (STR #3731)
	- The PostScript filter did not apply the mirror and number-up options
	  properly, leading to offset and clipped output (STR #3732)
	- The network backends always reported "low toner" or "out of toner"
	  states, even for inkjet printers (STR #3733)


CHANGES IN CUPS V1.4.6

	- Regression: The pstops filter did not support landscape printing of
	  PostScript files (STR #3722)
	- The scheduler killed retried (fax) jobs after restarting them
	  (STR #3697)
	- The cupsAdminSetServerSettings() function disabled sharing when
	  debug logging was enabled (STR #3712)


CHANGES IN CUPS V1.4.5

	- Documentation fixes (STR #3542, STR #3650)
	- Localization fixes (STR #3635, STR #3636, STR #3647, STR #3666)
	- Security: Fixed a memory corruption bug reported in CVE-2010-2941
	  (STR #3648)
	- The CUPS API incorrectly mapped the HTTP_UNAUTHORIZED status to the
	  IPP_NOT_AUTHORIZED status code, when IPP_NOT_AUTHENTICATED would be
	  the correct mapping (STR #3684)
	- The scheduler would restart jobs while shutting down (STR #3679)
	- Fixed a PPD loader bug that could cause a crash in cupsd (STR #3680)
	- Improved the mapping of non-standard PPD and PWG names (STR #3671)
	- The scheduler did not initialize Kerberos in all cases (STR #3662)
	- cupsAdminSetServerSettings duplicated Listen and Order lines
	  (STR #3645)
	- Added DeviceN colorspace support to the CUPS Raster format (STR #3419)
	- ppdMarkDefaults() did not clear the marked field of the previous
	  choices (STR #3642)